seaqt/QtWebEngineCore/gen_qwebenginepermission.h

class QMetaObject;
class QUrl;
class QWebEnginePermission;
typedef struct QMetaObject QMetaObject;
typedef struct QUrl QUrl;
typedef struct QWebEnginePermission QWebEnginePermission;
QWebEnginePermission* QWebEnginePermission_new();
QWebEnginePermission* QWebEnginePermission_new_from(QWebEnginePermission* from);
void QWebEnginePermission_operatorAssign(QWebEnginePermission* self, QWebEnginePermission* from);
void QWebEnginePermission_swap(QWebEnginePermission* self, QWebEnginePermission* other);
QUrl* QWebEnginePermission_origin(const QWebEnginePermission* self);
uint8_t QWebEnginePermission_permissionType(const QWebEnginePermission* self);
uint8_t QWebEnginePermission_state(const QWebEnginePermission* self);
bool QWebEnginePermission_isValid(const QWebEnginePermission* self);
void QWebEnginePermission_grant(const QWebEnginePermission* self);
void QWebEnginePermission_deny(const QWebEnginePermission* self);
void QWebEnginePermission_reset(const QWebEnginePermission* self);
bool QWebEnginePermission_isPersistent(uint8_t permissionType);
const QMetaObject* QWebEnginePermission_staticMetaObject();